# sandbox

./: BUILD.gn
angle/: BUILD.gn
angle/common/: BUILD.gn  esUtil.c
angle/common/Win32/: esUtil_win32.c
angle/triangle/: BUILD.gn  main.cc
anim/: BUILD.gn
anim/animation/: BUILD.gn  main.cc
anim/blending_animation/: BUILD.gn  main.cc
anim/mesh/: BUILD.gn  main.cc
anim/morp_skeleton/: texture.afx
anim/morphing1/: BUILD.gn  main.cc  morphing.afx  morphing.h
anim/morphing2/: main.cc
anim/objects/: BUILD.gn
anim/skeleton/: BUILD.gn  main.cc  texture.afx
anim/skinned_mesh1/: BUILD.gn  main.cc
anim/skinned_mesh2/: BUILD.gn  main.cc
anim/skinned_mesh3/: BUILD.gn  main.cc
animation/: BUILD.gn  main.cc
base/: BUILD.gn  animation.cc  animation.h  assimp.h  base.h  camera_control.cc  coord.afx  coord.cc  coord.h  grid.cc  grid.h  hardware_skinned_mesh.cc  hardware_skinned_mesh.h  heightmap.cc  ilimage_wrapper.cc  ilimage_wrapper.h  image.cc  image.h  line.afx  loader.cc  loader.h  mesh.cc  mesh.h  skeleton.afx  skeleton.cc  skeleton.h  skinned_mesh.cc  skinned_mesh.h  software_skinned.afx  software_skinned_mesh.cc  software_skinned_mesh.h  util.cc  util.h  xfile_loader.cc  xfile_loader.h
blending_animation/: BUILD.gn
clipmap/: BUILD.gn
clipmap/mergetex/: BUILD.gn  main.cc  terrain_tile.cc  terrain_tile.h  tex_merge.afx
clipmap/normalmap/: BUILD.gn  terrain_grid.h
clipmap/progtex/: BUILD.gn  main.cc  texture.afx
clipmap/sampleinvs/: BUILD.gn  grid_tile.afx  main.cc  terrain_grid.cc
clipmap/vertexbuffer/: .#main.cc  BUILD.gn  main.cc  terrain_grid.cc  terrain_grid.h
coord/: BUILD.gn  main.cc
heightmap/: BUILD.gn  diffuse.afx  main.cc
imagetest/: BUILD.gn
imagetest/devil/: BUILD.gn  lcms_main.cc  libjpeg_main.cc  main.cc  mng_main.cc
light/: BUILD.gn
light/ambient/: BUILD.gn  ambient.afx  main.cc
light/specular/: BUILD.gn  main.cc  specular.afx
mesh/: BUILD.gn  diffuse.afx  main.cc  texture.afx
morp_skeleton/: BUILD.gn  main.cc
morphing1/: BUILD.gn  main.cc  morphing.afx  morphing.cc  morphing.h  texture.afx
objects/: BUILD.gn  diffuse.afx  main.cc
res/: teaport.3DS  torus.3DS  xyz.x3d
res/coord/: coord.mtl
skeleton/: BUILD.gn  main.cc
skinned_mesh1/: BUILD.gn  main.cc  soft_skinned_effect.afx
skinned_mesh2/: BUILD.gn  hardware_skinned.afx  main.cc
skinned_mesh3/: BUILD.gn  main.cc
terrain/: BUILD.gn
terrain/base/: BUILD.gn  grid.cc  grid.h  heightmap.cc
terrain/colormap/: BUILD.gn  diffuse.afx  main.cc
terrain/grid/: BUILD.gn
terrain/heightmap/: BUILD.gn  diffuse.afx  main.cc
terrain/light/: BUILD.gn  diffuse.afx  main.cc
terrain/res/: snow.dds
terrain/res/tex/: HighTile.dds  detailMap.dds  grass_1.dds  lowTile.dds  lowestTile.dds
terrain/slopetex/: BUILD.gn  diffuse.afx  main.cc
terrain/tex1/: BUILD.gn  diffuse.afx  main.cc
terrain/tex2/: main.cc
terrain/tex3/: BUILD.gn  diffuse.afx
