
group("sbox") {
  deps = [
    "base:sbox_base",
    "objects:sbox_objects",
    "mesh:sbox_mesh",
    "skeleton:sbox_skeleton",
    "skinned_mesh1:sbox_soft_skinned_mesh",
    "skinned_mesh2:sbox_hard_skinned_mesh",
    "skinned_mesh3:sbox_skinned_mesh",
    "animation:sbox_animation",
    "heightmap:sbox_heightmap",
  ]
}