import("//build/templates/afx.gni")

afx("sbox_base_effect") {
  source = "skeleton.afx"
  filename = "skeleton_effect"
}

afx("sbox_base_line_effect") {
  source = "line.afx"
  filename = "line"
}

static_library("sbox_base") {
  sources = [
    "animation.cc"
    "animation.h"
    "mesh.cc",
    "mesh.h",
    "grid.cc",
    "grid.h",
    "heightmap.cc",
    "heightmap.h",
    "loader.cc",
    "loader.h",
    "camera_control.cc",
    "camera_control.h",
    "skeleton.cc",
    "skeleton.h",
    "skinned_mesh.cc",
    "skinned_mesh.h",
    "util.cc",
    "util.h",
  ]
  deps = [
    "//third_party/assimp:assimp",
    "//azer:azer",
    ":sbox_base_effect",
    ":sbox_base_line_effect",
  ]
}

afx("sbox_hardware_skinned_effect") {
  source = "hardware_skinned.afx"
  filename = "hardware_skinned"
}

static_library("sbox_hardware_meshlib") {
  sources = [
    "hardware_skinned_mesh.cc",
    "hardware_skinned_mesh.h",
  ]
  deps = [
    ":sbox_base",
    ":sbox_hardware_skinned_effect"
    "//third_party/assimp:assimp",
  ]       
}