import("//build/templates/afx.gni")

afx("sbox_base_effect") {
  source = "skeleton.afx"
  filename = "skeleton_effect"
}

afx("sbox_base_line_effect") {
  source = "line.afx"
  filename = "line"
}

static_library("sbox_base") {
  sources = [
    "animation.cc"
    "animation.h"
    "mesh.cc",
    "mesh.h",
    "skinned_mesh.cc",
    "skinned_mesh.h",
    "camera_control.cc",
    "camera_control.h",
    "skeleton.cc",
    "skeleton.h",
    "util.cc",
    "util.h",
  ]
  deps = [
    "//third_party/assimp:assimp",
    "//azer:azer",
    ":sbox_base_effect",
    ":sbox_base_line_effect",
  ]
}

static_library("sbox_image") {
  sources = [
    "image.cc",
    "image.h",
    "ilimage_wrapper.cc",
    "ilimage_wrapper.h",
  ]
  deps = [
    "//third_party/devil:devil",
    "//third_party/devil:devilu",
  ]
}

afx("sbox_hardware_skinned_effect") {
  source = "hardware_skinned.afx"
  filename = "hardware_skinned"
}

static_library("sbox_hardware_meshlib") {
  sources = [
    "hardware_skinned_mesh.cc",
    "hardware_skinned_mesh.h",
  ]
  deps = [
    ":sbox_base",
    ":sbox_hardware_skinned_effect"
    "//third_party/assimp:assimp",
  ]       
}

afx("sbox_software_skinned_effect") {
  source = "software_skinned.afx"
  filename = "software_skinned"
}

static_library("sbox_software_meshlib") {
  sources = [
    "software_skinned_mesh.cc",
    "software_skinned_mesh.h",
  ]
  deps = [
    ":sbox_base",
    ":sbox_software_skinned_effect"
    "//third_party/assimp:assimp",
  ]       
}

afx("sbox_coord_effect") {
  source = "coord.afx"
  filename = "coord"
}

static_library("sbox_coordlib") {
  sources = [
    "coord.cc",
    "coord.h",
  ]
  deps = [
    ":sbox_base",
    ":sbox_coord_effect"
    "//third_party/assimp:assimp",
  ]       
}