import("//build/templates/afx.gni")


afx("sbox_animation_effect") {
  source = "hardware_skinned.afx"
  filename = "hardware_skinned"
}

executable("sbox_animation") {
  sources = ["main.cc"]
  deps = [
    "//base:appinit",
    "//third_party/assimp:assimp",
    "../base:sbox_base",
    ":sbox_animation_effect",
  ]
}