import("//build/templates/afx.gni")

afx("sbox_morphing1_effect") {
  source = "texture.afx"
  filename = "texture"
}

executable("sbox_morphing1") {
  sources = ["main.cc"]
  deps = [
    "//base:appinit",
    "//third_party/assimp:assimp",
    "../base:sbox_base",
    ":sbox_morphing1_effect",
  ]
}