import("//build/templates/afx.gni")

afx("sbox_morphing1_effect") {
  source = "morphing.afx"
  filename = "morphing"
}

executable("sbox_morphing1") {
  sources = [
    "main.cc"
    "morphing.cc",
    "morphing.h",
  ]
  deps = [
    "//base:appinit",
    "//third_party/assimp:assimp",
    "//sbox/base:sbox_base",
    ":sbox_morphing1_effect",
  ]
}