import("//build/templates/afx.gni")

afx("sbox_anim_objects_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

executable("sbox_objects") {
  sources = ["main.cc"]
  deps = [
    "//base:appinit",
    "//third_party/assimp:assimp",
    "//sbox/base:sbox_base",
    ":sbox_anim_objects_effect",
  ]
}