import("//build/templates/afx.gni")

afx("sbox_anim_skeleton_effect") {
  source = "texture.afx"
  filename = "texture"
}

executable("sbox_skeleton") {
  sources = ["main.cc"]
  deps = [
    "//base:appinit",
    "//third_party/assimp:assimp",
    "//sbox/base:sbox_base",
    ":sbox_anim_skeleton_effect",
  ]
}