import("//build/templates/afx.gni")


afx("sbox_anim_skinned_effect") {
  source = "hardware_skinned.afx"
  filename = "hardware_skinned"
}

executable("sbox_skinned_mesh") {
  sources = ["main.cc"]
  deps = [
    "//base:appinit",
    "//third_party/assimp:assimp",
    "//sbox/base:sbox_base",
    ":sbox_anim_skinned_effect",
  ]
}