import("//build/templates/afx.gni")

afx("sbox_clipmap_sampleinvs_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

afx("sbox_clipmap_sampleinvs_gridtile_effect") {
  source = "grid_tile.afx"
  filename = "grid_tile"
}

executable("sbox_clipmap_sampleinvs") {
  sources = [
    "main.cc",
    "terrain_grid.cc",
    "terrain_grid.h",
  ]
  deps = [
    "//sbox/terrain/base:sbox_terrain_base",
    "//sbox/base:sbox_base",
    "//base:appinit",
    ":sbox_clipmap_sampleinvs_effect",
    ":sbox_clipmap_sampleinvs_gridtile_effect",
  ]
}
