import("//build/templates/afx.gni")

afx("sbox_terrain_heightmap_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

executable("sbox_terrain_heightmap") {
  sources = [
    "main.cc",
  ]
  deps = [
    "//sbox/terrain/base:sbox_terrain_base",
    "//sbox/base:sbox_base",
    "//base:appinit",
    ":sbox_terrain_heightmap_effect",
    "//sbox/base:sbox_coordlib",
  ]
}