import("//build/templates/afx.gni")

afx("sbox_terrain_slopetex_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

executable("sbox_terrain_slopetex") {
  sources = [
    "main.cc",
  ]
  deps = [
    "//sbox/terrain/base:sbox_terrain_base",
    "//sbox/base:sbox_base",
    "//sbox/base:sbox_image",
    "//base:appinit",
    ":sbox_terrain_slopetex_effect",
    "//sbox/base:sbox_coordlib",
  ]
}