import("//build/templates/afx.gni")

afx("sbox_terrain_tex3_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

executable("sbox_terrain_tex3") {
  sources = [
    "main.cc",
  ]
  deps = [
    "//sbox/terrain/base:sbox_terrain_base",
    "//sbox/base:sbox_base",
    "//base:appinit",
    ":sbox_terrain_tex3_effect",
    "//sbox/base:sbox_coordlib",
  ]
}